RESOLVED FIXED199482
StorageManager::suspend() sometimes fails to call its completion handler
https://bugs.webkit.org/show_bug.cgi?id=199482
Summary StorageManager::suspend() sometimes fails to call its completion handler
Chris Dumez
Reported 2019-07-03 16:50:16 PDT
StorageManager::suspend() sometimes fails to call its completion handler.
Attachments
Patch (1.88 KB, patch)
2019-07-03 16:54 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-03 16:54:42 PDT
WebKit Commit Bot
Comment 2 2019-07-03 18:13:14 PDT
Comment on attachment 373437 [details] Patch Clearing flags on attachment: 373437 Committed r247126: <https://trac.webkit.org/changeset/247126>
WebKit Commit Bot
Comment 3 2019-07-03 18:13:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-07-03 18:14:53 PDT
Note You need to log in before you can comment on or make changes to this bug.