StorageManager::suspend() sometimes fails to call its completion handler https://bugs.webkit.org/show_bug.cgi?id=199482

Reviewed by Youenn Fablet.

Make sure the completion handler gets called in the early return cases.

* NetworkProcess/WebStorage/StorageManager.cpp:
(WebKit::StorageManager::suspend):


Canonical link: https://commits.webkit.org/213392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247126 268f45cc-cd09-0410-ab3c-d52691b4dbfc